[project]
name = "my-proj"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan"}
]
requires-python = ">=3.14"
dependencies = [
]

[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
# Указываем, где искать исходный код проекта
mypy_path = "src"

# Разрешаем mypy правильно определять имена модулей без __init__.py
namespace_packages = true
explicit_package_bases = true

[tool.isort]
# максимальная длина строки
line_length = 119

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "requests (>=2.34.2,<3.0.0)"
]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
